RESOLVED FIXED323085
[JSC] Fix Structure transition wrong checking issues
https://bugs.webkit.org/show_bug.cgi?id=323085
Summary [JSC] Fix Structure transition wrong checking issues
Yusuke Suzuki
Reported 2026-09-01 01:35:33 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-09-01 01:35:42 PDT
Yusuke Suzuki
Comment 2 2026-09-01 01:38:23 PDT
EWS
Comment 3 2026-09-01 10:16:25 PDT
Committed 320251@main (731652af64ff): <https://commits.webkit.org/320251@main> Reviewed commits have been landed. Closing PR #72924 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.