[JSC] Fix Structure transition wrong checking issues https://bugs.webkit.org/show_bug.cgi?id=323085 rdar://186339983

Reviewed by Marcus Plutowski and Keith Miller.

Adding MonoProto condition to isHandlerPrototypeChainCacheable.
Otherwise we may get a structure which has differnt [[Prototype]] (due
to PolyProto). In that case, worst case is having jsNull as a JSObject*,
so crash issue with a deterministic address. Also updating oldStructure
by passing it to CommonSlowPaths::putDirectWithReify. This is not an
actual issue, but it makes oldStructure more solid.

Test: JSTests/stress/proxy-handler-traps-cache-poly-proto-handler.js

* JSTests/stress/proxy-handler-traps-cache-poly-proto-handler.js: Added.
(shouldBe):
(makePolyProtoObject.foo.C):
(makePolyProtoObject.foo):
(return.foo):
(shouldBe.handler):
* Source/JavaScriptCore/jit/JITOperations.cpp:
(JSC::directPutByValOptimize):
* Source/JavaScriptCore/llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):
* Source/JavaScriptCore/runtime/ProxyObject.cpp:
(JSC::ProxyObject::getHandlerTrap):
* Source/JavaScriptCore/runtime/ProxyObject.h:
(JSC::ProxyObject::isHandlerTrapsCacheValid):

Canonical link: https://commits.webkit.org/320251@main